textOverflow width fixed

--- a/src/components/topbar/style.less
+++ b/src/components/topbar/style.less
@@ -235,7 +235,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        width: 90px;
+        max-width: 90px;
     }
 }
 
